[gd_scene load_steps=8 format=2]

[ext_resource path="res://dinos/_master.gd" type="Script" id=1]
[ext_resource path="res://sprites/atq_life.png" type="Texture" id=2]
[ext_resource path="res://fonts/tt0524m_.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://sprites/Dinossauros/t-rex2.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 72, 60 )

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Dino" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="AtqLife" type="Sprite" parent="."]
position = Vector2( 0, 45 )
texture = ExtResource( 2 )

[node name="AtqValue" type="Label" parent="AtqLife"]
margin_left = -58.0
margin_top = -24.0
margin_right = -6.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="Label" type="Label" parent="AtqLife"]
margin_top = -24.0
margin_right = 54.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
